<?xml version="1.0"?>
<package>
  <name>gps_call</name>
  <version>0.0.1</version>
  <description>

    The gps pose conversion to local pose package

  </description>
  <maintainer email="hzhang032@e.ntu.edu.sg">Handuo</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>tf</run_depend>
    <!--<build_export_depend>message_runtime</build_export_depend>-->
    <!--<exec_depend>message_runtime</exec_depend>-->
  <export>
  </export>
</package>
